--- a/package.json
+++ b/package.json
@@ -6,28 +6,23 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@react-three/drei": "^4.3.3",
-    "@react-three/fiber": "^6.2.3",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
-    "@types/three": "^0.131.0",
-    "drei": "^2.2.21",
+    "axios": "^0.21.1",
     "framer-motion": "^4",
     "react": "^17.0.2",
-    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.2.4",
     "react-toastify": "^7.0.4",
-    "three": "^0.131.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
